[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.7.9", features = ["tokio"] }
tracing-subscriber = "0.3.19"
sqlx = { version = "0.8.2", features = ["default"] }
serde_json = "1.0.134"
chrono = "0.4.39"